# macos-gtest

./: CMakeLists.txt  README.md
.github/workflows/: gtest.yml
src/: CMakeLists.txt  hello.cpp  hello.hpp  main.cpp
tests/: CMakeLists.txt  hello_test.cpp
